================================================================================
~ Refactored code
+ Convey wrong secret key errors instead of reporting there is no way to connect to the site
+ Remove --verbose option, it's implied when you use --debug
+ Using --debug also generates the log file remotecli_log.txt
+ Works with sites on recalcitrant servers with way too verbose PHP error output

Akeeba Remote CLI 2.3.5
================================================================================
+ Support for the wp-admin/admin-ajax.php endpoint in WordPress.
~ Workaround for utf8_encode and _decode being deprecated in PHP 8.2

Akeeba Remote CLI 2.3.4
================================================================================
# [HIGH] Download after backup fails if the backup completes in a single step

Akeeba Remote CLI 2.3.3
================================================================================
~ Allow force–setting the component, format and view from the endpoint URL

Akeeba Remote CLI 2.3.2
================================================================================
~ Updated cacert.pem. The file will be kept up-to-date using Composer.
# [HIGH] Backup for WordPress and Solo would fail if you used remote.php as the endpoint.

Akeeba Remote CLI 2.3.1
================================================================================
~ Minimum PHP version is now 7.2.0
~ Support for PHP 8.0
# [MEDIUM] fopen network connection adapter was broken

Akeeba Remote CLI 2.3.0
================================================================================
~ Support for remote backup JSON API version 2
~ Changed User Agent string to AkeebaRemoteCLI/2.3.0

Akeeba Remote CLI 2.2.0
================================================================================
- Removed support for encapsulations other than RAW
# Download after backup was broken with newer Akeeba Backup / Akeeba Solo versions

Akeeba Remote CLI 2.1.1